:sparkles: add skills CRUD
add CRUD of skills context
