# lib/getwork_web/controllers/skill_controller.ex
@@ -7,36 +7,27 @@ defmodule GetworkWeb.SkillController do
   action_fallback GetworkWeb.FallbackController
 
   def index(conn, _params) do
-    skill = Skills.list_skill()
-    render(conn, "index.json", skill: skill)
+    with {:ok, skills} <- Skills.list_skills() do
+      render(conn, "index.json", skills: skills)
+    end
   end
 
-  def create(conn, %{"skill" => skill_params}) do
+  def create(conn, skill_params) do
     with {:ok, %Skill{} = skill} <- Skills.create_skill(skill_params) do
       conn
       |> put_status(:created)
-      |> put_resp_header("location", Routes.skill_path(conn, :show, skill))
       |> render("show.json", skill: skill)
     end
   end
 
-  def show(conn, %{"id" => id}) do
-    skill = Skills.get_skill!(id)
-    render(conn, "show.json", skill: skill)
-  end
-
-  def update(conn, %{"id" => id, "skill" => skill_params}) do
-    skill = Skills.get_skill!(id)
-
-    with {:ok, %Skill{} = skill} <- Skills.update_skill(skill, skill_params) do
+  def update(conn, skill_params) do
+    with {:ok, %Skill{} = skill} <- Skills.update_skill(skill_params["id"], skill_params) do
       render(conn, "show.json", skill: skill)
     end
   end
 
   def delete(conn, %{"id" => id}) do
-    skill = Skills.get_skill!(id)
-
-    with {:ok, %Skill{}} <- Skills.delete_skill(skill) do
+    with {:ok, %Skill{}} <- Skills.delete_skill(id) do
       send_resp(conn, :no_content, "")
     end
   end
