# priv/static/swagger.yml
@@ -26,6 +26,13 @@ definitions:
         type: string
     required:
       - name
+  Skill:
+    type: object
+    properties:
+      name:
+        type: string
+    required:
+      - name
 paths:
   # Languages
   /languages:
@@ -269,3 +276,124 @@ paths:
             }
       tags:
         - Tags
+  # Skills
+  /skills:
+    post:
+      summary: Create a new skill
+      description: Create a new skill
+      operationId: create
+      parameters:
+        - in: body
+          name: skill
+          description: data of the new skill
+          schema:
+            $ref: '#/definitions/Skill'
+      responses:
+        '201':
+          description: Created
+          examples:
+            application/json: {
+              "data": {
+                "name": "Elixir"
+              }
+            }
+        '422':
+          description: Unprocessable Entity
+          examples:
+            application/json: {
+              "errors": {
+                "name": [
+                  "can't be blank"
+                ]
+              }
+            }
+      tags:
+        - Skills
+    get:
+      summary: List all skills
+      description: List all skills
+      operationId: index
+      responses:
+        '200':
+          description: Sucesss
+          examples:
+            application/json: {
+              "data": [
+                {
+                  "id": "c6637477-a98e-4314-89a3-38c5dcf5e99c",
+                  "name": "Elixir",
+                },
+                {
+                  "id": "b938351f-a403-4eb2-86b5-8f1a7995d168",
+                  "name": "RESTful API",
+                }
+              ]
+            }
+      tags:
+      - Skills
+  /skills/{id}:
+    put:
+      summary: Updates a skill
+      description: Updates a skill
+      operationId: update
+      parameters:
+        - in: path
+          name: id
+          required: true
+          type: string
+          description: id of the skill to update
+        - in: body
+          name: skill
+          description: Skill update data
+          schema:
+            $ref: '#/definitions/Skill'
+      responses:
+        '200':
+          description: Success
+          examples:
+            application/json: {
+              "name": "RESTful API"
+            }
+        '404':
+          description: Resource not found
+          examples:
+            application/json: {
+              "errors": {
+                "detail": "resource not found"
+              }
+            }
+        '422':
+          description: Unprocessable Entity
+          examples:
+            application/json: {
+              "errors": {
+                "name": [
+                  "can't be blank"
+                ]
+              }
+            }
+      tags:
+        - Skills
+    delete:
+      summary: Deletes a skill
+      description: Deletes a skill
+      operationId: delete
+      parameters:
+        - in: path
+          name: id
+          required: true
+          type: string
+          description: id of the skill to delete
+      responses:
+        '204':
+          description: Success
+        '404':
+          description: Resource not found
+          examples:
+            application/json: {
+              "errors": {
+                "detail": "resource not found"
+              }
+            }
+      tags:
+        - Skills
